--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -25,6 +25,8 @@ jobs:
 
       # will use aws cli to push the build to S3
       - uses: chrislennon/action-aws-cli@v1.1
+        env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
       - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
