--- a/.github/workflows/marketing.yml
+++ b/.github/workflows/marketing.yml
@@ -1,4 +1,4 @@
-name: deploy-container
+name: deploy-marketing
 
 # if someone pushes the code in the master branch and specifically in the containers package
 on:
@@ -6,12 +6,12 @@ on:
     branches:
       - master
     paths:
-      - 'packages/container/**'
+      - 'packages/marketing/**'
 
 defaults:
   run:
     # setting working directory so that npm install and other commands can work
-    working-directory: packages/container
+    working-directory: packages/marketing
 
 jobs:
   build:
@@ -22,8 +22,6 @@ jobs:
       - uses: actions/checkout@v2
       - run: npm install
       - run: npm run build
-        env:
-          PRODUCTION_DOMAIN: ${{ secrets.PRODUCTION_DOMAIN }}
 
       # will use aws cli to push the build to S3
       - name: Configure AWS Credentials
@@ -35,8 +33,8 @@ jobs:
           
       - name: Copy files to the s3 website content bucket
         run: 
-          aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
+          aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/marketing/latest
 
       - name: Running cloudfront invalidation
         run: 
-          aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/container/latest/index.html"
+          aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/marketing/latest/remoteEntry.js"
